--- a/proj-2/balancebeam/Cargo.toml
+++ b/proj-2/balancebeam/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+num_cpus = "1.13.0"
 clap = { version = "3.0.10", features = ["derive"] }
 httparse = "1.3"
 http = "0.2"
